Bug 62863 - Discover fails to find domain if DNS SRV records are absent despite already knowing the domain
Summary: Discover fails to find domain if DNS SRV records are absent despite already k...
Status: RESOLVED FIXED
Alias: None
Product: realmd
Classification: Unclassified
Component: General (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Stef Walter
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on: 63907
Blocks:
  Show dependency treegraph
 
Reported: 2013-03-28 12:37 UTC by John Dennis
Modified: 2013-04-29 12:46 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Fallback to configured realms when discovering (10.29 KB, patch)
2013-04-25 11:02 UTC, Stef Walter
Details | Splinter Review

Description John Dennis 2013-03-28 12:37:13 UTC
realmd might already know about the domain (i.e. from reading the sssd config), but if you call Discover on that domain it will fail unless there are DNS SRV records for the domain. realmd should be able to discover a domain it already knows about instead of failing.

$ hostname
vm-054.xxx.com
$ realm list
xxx.com
  type: kerberos
  realm-name: XXX.COM
  domain-name: xxx.com
  configured: kerberos-member
  server-software: freeipa
  client-software: sssd
  required-package: freeipa-client
  required-package: sssd-tools
  required-package: sssd
  login-formats: %U@xxx.com
  login-policy: 
$ realm discover -v xxx.com
 * Searching for kerberos SRV records for domain: _kerberos._udp.xxx.com
 * Searching for MSDCS SRV records on domain: _kerberos._tcp.dc._msdcs.xxx.com
 * Couldn't find kerberos DNS records for: xxx.com
realm: No such realm found: xxx.com
Comment 1 Stef Walter 2013-04-25 11:02:38 UTC
Created attachment 78459 [details] [review]
Fallback to configured realms when discovering

 * If no discovered realms for a string, check locally configured
   realms to see if they're available locally, but just not
   online right now.
 * Reorganize how realms are enumerated on a provider, so that
   we can accomplish the above generically
Comment 2 Stef Walter 2013-04-25 11:03:40 UTC
This is ready for review.
Comment 3 Stef Walter 2013-04-29 12:46:31 UTC
Attachment 78459 [details] pushed as eb6621d - Fallback to configured realms when discovering

Pushed to git master for inclusion in the upcoming test day.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.