Fallback to configured realms when discovering

* If no discovered realms for a string, check locally configured
   realms to see if they're available locally, but just not
   online right now.
 * Reorganize how realms are enumerated on a provider, so that
   we can accomplish the above generically

https://bugs.freedesktop.org/show_bug.cgi?id=62863